add new functions in lineParser

--- a/lammpsHT/auto.in
+++ b/lammpsHT/auto.in
@@ -7,17 +7,17 @@ N = 1 START
     N_ensemble = 5
     Parallel False
 
-    line bulk1 1
+    Line bulk1 1
         index 4
         parameter random
     END line
 
-    line interior 1
+    Line interior 1
         index 4
         parameter random
     END line
 
-    line velocity_placeolder 1
+    Line velocity_placeolder 1
         index 4
         parameter random
     END line
@@ -27,7 +27,7 @@ END layer
 
 N = 2 START
 
-    line pressure 1
+    Line pressure 1
         index 5
         parameter [-0.5, -1.0, -1.5, -2, -2.5, -3]  
 
