--- a/auto.in
+++ b/auto.in
@@ -43,9 +43,18 @@ END layer
 
 N = 2 START
     njobs 1
-    Line pressure 1
+    Line pressure 2
         index 5
-        parameter [-0.5, -1.0, -1.5, -2, -2.5, -3] 
+        parameter [-0.1, -1.0, -1.5, -2, -2.5, -3] 
+        index 6
+        parameter [-0.2, -1.0, -1.5, -2, -2.5, -3]
+    END line
+    
+    Line volume 2
+        index 7
+        parameter [-0.3, -1.0, -1.5, -2, -2.5, -3] 
+        index 8
+        parameter [-0.4, -1.0, -1.5, -2, -2.5, -3]
 
     END line
 
