--- a/auto.in
+++ b/auto.in
@@ -1,7 +1,7 @@
 #The information required to generate automization code
 
 Filename hole.in
-N_layers 2
+N_layers 3
 
 N = 1 START
 
@@ -37,25 +37,25 @@ N = 1 START
     END post
 
 
-
     
 END layer
 
 N = 2 START
     njobs 1
-    Line pressure 2
+    Line initial_fluid 2
         index 5
         parameter [-0.1, -1.0, -1.5, -2, -2.5, -3] 
         index 6
         parameter [-0.2, -1.0, -1.5, -2, -2.5, -3]
     END line
-    
-    Line volume 2
-        index 7
-        parameter [-0.3, -1.0, -1.5, -2, -2.5, -3] 
-        index 8
-        parameter [-0.4, -1.0, -1.5, -2, -2.5, -3]
 
+END layer
+
+N = 3 START
+    njobs 3
+    Line pressure 1
+        index 4
+        parameter [0, 1, 2, 3, 4]
     END line
 
 END layer
